--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "heroicons": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.542.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,6 +40,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
